# svaguely

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: .gitignore  CNAME  Makefile  clean.bat  index.html  make.bat
docs/source/: conf.py  getting_started.rst  index.rst
requirements/: requirements_dev.txt
samples/: convert_to_shape.py  ocr_sample.py  plot_parsed_svaguely_logo.py  recognition.py
svaguely/: __init__.py  conversion.py  data_models.py  element_to_shape.py  metadata.py  parsing.py  rendering.py
svaguely/conversion/: __init__.py  path.py  point.py  poly_line.py  polygon.py  rectangle.py  simple_line.py  text.py
svaguely/converters/: __init__.py  circle.py  image.py  path.py  point.py  poly_line.py  polygon.py  rectangle.py  simple_line.py  text.py
tests/: test_converters.py  test_imports.py  test_parsing.py
tests/conversion/: test_circle.py  test_point.py  test_rect.py
tests/fixtures/: svg_snippets.py
