[tool.poetry]
name = "svaguely"
version = "0.0.1"
description = ""
authors = ["Christian Heider Lindbjerg <chen@mapspeople.com>"]
readme = "README.md"
packages = [{ include = "svaguely" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
shapely = '2.0.1'
pytz = "^2022.7"
crc32c = "^2.3.post0"
svgelements = ">0.0.1"
apppath = "^1.0.0"
warg = "^1.1.2"
jord = "^0.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
black = "^23.1.0"
pre-commit = "^3.0.0"
sphinx = "^6.1.3"
sphinxcontrib-programoutput = "^0.17"
furo = "^2022.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
