[tool.poetry]
name = "svaguely"
version = "0.0.3"
description = ""
authors = ["Christian Heider Lindbjerg <chen@mapspeople.com>"]
readme = "README.md"
packages = [{ include = "svaguely" }]

[tool.poetry.dependencies]
python = ">=3.8.1"
pytest = ">=7.2.0"
shapely = '^2.0.1'
pytz = ">=2022.7"
crc32c = ">=2.3.post0"
svgelements = ">0.0.1"
apppath = ">=1.0.0"
warg = ">=1.3.4"
jord = { version = ">=0.4.1", extras = ['shapely'] }
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
pytest = ">=7.2.0"
black = ">=23.1.0"
pre-commit = ">=3.0.0"
furo = ">=2022.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
